@@ -443,8 +443,25 @@ class tl_iso_attributes extends Backend
 		{
 			$this->Database->query(sprintf("ALTER TABLE tl_iso_products MODIFY %s %s", $objAttribute->field_name, $GLOBALS['ISO_ATTR'][$dc->activeRecord->type]['sql']));
 		}
+		
 		$this->import('IsotopeDatabase');
-		$this->IsotopeDatabase->add($objAttribute->field_name, $GLOBALS['ISO_ATTR'][$dc->activeRecord->type]['sql']);
+		$this->IsotopeDatabase->update($objAttribute->field_name, $GLOBALS['ISO_ATTR'][$dc->activeRecord->type]['sql']);
+		
+		if ($objAttribute->fe_filter && $GLOBALS['ISO_ATTR'][$dc->activeRecord->type]['useIndex'])
+		{
+			$this->IsotopeDatabase->add("KEY `{$objAttribute->field_name}`", "(`{$objAttribute->field_name}`)");
+			
+			$arrFields = $this->Database->listFields('tl_iso_products');
+			
+			if ($arrFields[$objAttribute->field_name]['type'] != 'index')
+			{
+				$this->Database->query("ALTER TABLE `tl_iso_products` ADD KEY `{$objAttribute->field_name}` (`{$objAttribute->field_name}`);");
+			}
+		}
+		else
+		{
+			$this->IsotopeDatabase->delete("KEY `{$objAttribute->field_name}`");
+		}
 	}
 
 
