@@ -10,6 +10,7 @@ Version 1.3.rc1 (2011-??-??)
 - Added new function IsotopeFrontend::prepareForm() to ease including custom forms created by the form generator
 - Added CSS class "trail" to product category pages when in reader mode (Ticket #76)
 - Added native SQL filtering for static attributes (#2045)
+- Added SQL index keys for filtered attributes (#2134)
 - Improved: loading products is now centralized in IsotopeFrontend static functions
 - Fixed radio button events in Internet Explorer (Ticket #484)
 - Fixed products DCA not loaded in rare cases
